--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <!-- Comentario de ejemplo ... !!  -->
 
   <header class="py-4">
     <div class="container">
